--- a/Learning_Django/hello/templates/hello/greet.html
+++ b/Learning_Django/hello/templates/hello/greet.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello</title>
+        <title>Hello!</title>
         <style>
             h1 {
                 text-align: center;
-                color: springgreen;
+                color: blue;
             }
         </style>
     </head>
     <body>
-        <h1>Hello, World!</h1>
+        <h1>Hello, {{ name }}!</h1>
     </body>
 </html>
