Deal with Statics

--- a/Learning_Django/ismyBirthday/templates/ismyBirthday/index.html
+++ b/Learning_Django/ismyBirthday/templates/ismyBirthday/index.html
@@ -1,7 +1,10 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Is My Birthday Today?</title>
+        <link rel="stylesheet" href="{% static 'ismyBirthday/styles.css' %}">
     </head>
     <body>
         {% if ismyBirthday %}
