--- a/Learning_Django/tasks/templates/tasks/add.html
+++ b/Learning_Django/tasks/templates/tasks/add.html
@@ -8,4 +8,7 @@
         <input type="text" name="input">
         <input type="submit">
     </form>
+    <h1>
+        <a href="{% url 'tasks:index' %}">See all tasks.</a>
+    </h1>
 {% endblock %}
