--- a/Learning_Django/tasks/templates/tasks/add.html
+++ b/Learning_Django/tasks/templates/tasks/add.html
@@ -6,7 +6,7 @@
     </h1>
     <form action="{% url 'tasks:add' %}" method="post">
         {% csrf_token %}
-        <input type="text" name="input">
+        {{ form }}
         <input type="submit">
     </form>
     <h1>
