Complete 'create new page'

--- a/Project_Wiki/encyclopedia/templates/encyclopedia/createpage.html
+++ b/Project_Wiki/encyclopedia/templates/encyclopedia/createpage.html
@@ -9,12 +9,10 @@
         <form action="{% url 'createNew' %}" method="post">
             {% csrf_token %}
             <div>
-                <label for="t">Title:</label>
-                <input id = "t" size="50" type="text" name="newTitle" placeholder="Enter the Title here" required>
-                <input type="button" value="Save">
-                <input type="reset">
+                {{ form }}
+                <button class="btn btn-outline-success" type="submit">Submit</button>
+                <button class="btn btn-outline-primary" type="reset">Reset</button>
             </div>
-            <textarea>Write your **Markdown** content here like __this__.</textarea>
         </form>
     </div>
 {% endblock %}
