--- a/Project_Wiki/encyclopedia/templates/encyclopedia/createpage.html
+++ b/Project_Wiki/encyclopedia/templates/encyclopedia/createpage.html
@@ -9,9 +9,18 @@
         <form action="{% url 'createNew' %}" method="post">
             {% csrf_token %}
             <div>
-                {{ form }}
-                <button class="btn btn-outline-success" type="submit">Submit</button>
-                <button class="btn btn-outline-primary" type="reset">Reset</button>
+                <div>
+                    {{ form.title.label }}
+                    {{ form.title }}
+                </div>
+                <div>
+                    {{ form.content.label }}
+                    {{ form.content }}
+                </div>
+                <div style="align-self: center;">
+                    <button class="btn btn-outline-success" type="submit">Submit</button>
+                    <button class="btn btn-outline-primary" type="reset">Reset</button>
+                </div>
             </div>
         </form>
     </div>
