Completed the project Wiki

--- a/Models (DATA)/Airline/Flights/templates/Flights/flight.html
+++ b/Models (DATA)/Airline/Flights/templates/Flights/flight.html
@@ -17,4 +17,16 @@
         <h6>No Passangers</h6>
         {% endfor %}
     </ul>
+
+    <h2>Add Passanger</h2>
+    <form action="{% url 'book' flight.id %}" method="post">
+        {% csrf_token %}
+        <select name="passanger">
+            {% for passanger in non_passangers %}
+            <option value="{{passanger.id}}">{{passanger}}</option>
+            {% endfor %}
+        </select>
+        <input type="submit">
+    </form>
+    
 {% endblock %}
