--- a/Project_Wiki/encyclopedia/templates/encyclopedia/entry.html
+++ b/Project_Wiki/encyclopedia/templates/encyclopedia/entry.html
@@ -6,4 +6,9 @@
 
 {% block body %}
     {{ entry|safe }}
+
+    <form action="{% url 'edit' title %}">
+        <input type="hidden">
+        <button type="submit" class="btn btn-dark">Edit</button>
+    </form>
 {% endblock %}
